Name:                mwc-random-monad
Version:             0.3
Synopsis:            Monadic interface for mwc-random
License:             BSD3
License-file:        LICENSE
Author:              Alexey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:          Alexey Khudyakov <alexey.skladnoy@gmail.com>
Category:            Math, Statistics
Build-type:          Simple
Cabal-version:       >=1.6
Description:         
  Simple monadit interface for mwc-random.

Library
  build-depends:     base >= 3 && < 5,
                     primitive,
                     vector >= 0.7,
                     mwc-random >= 0.11
  Exposed-modules:   System.Random.MWC.Monad
                     System.Random.MWC.Distributions.Monad
  Ghc-options:       -O2 -Wall
  Ghc-prof-options:  -auto-all

source-repository head
  type:     mercurial
  location: http://bitbucket.org/Shimuuar/mwc-random-monad
